# scripts

./: pyproject.toml
lib/: colors-parquet-gen.py
public/: colors.parquet
src/: color-info.py  pdf-to-img.py
